fix error z-index

--- a/src/css/themes/datatable.scss
+++ b/src/css/themes/datatable.scss
@@ -323,7 +323,7 @@
     transform: translateX(-50%);
     transition: .3s;
     top: 150%;
-    z-index: 1;
+    z-index: 10;
     opacity: 0;
     display: none;
 
